[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_seq"
version = "0.2.6"
description = "Libary for handling genetic sequences."
readme = "README.rst"
authors = [
    { name = "Johannes Programming", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'Bio>=1.5.3',
    'gravy>=1.0.0',
    'seqpad>=1.0.0',
    'lib-dzne-filedata>=0.4.0',
    'na_quantors>=1.0.0',
]
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Source = "https://github.com/johannes-programming/lib_dzne_seq"
Download = "https://pypi.org/project/lib-dzne-seq/#files"
